Minor bug changes
